data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1568.wast
;; 9. **Test 9**: A loop with an edge case where the `br_if` branch condition depends on the result of a prior memory operation. Faulty stack management could lead to incorrect condition evaluation leading to infinite loops.

(assert_invalid
  (module
    (memory 1)
    (func $conditional_memory_loop
      (loop $loop
        (i32.store (i32.const 0) (i32.const 42))
        (i32.const 0)
        (i32.load (i32.const 0))
        (br_if $loop)
      )
    )
  )
  "unreachable code"
)